[gd_scene load_steps=32 format=4 uid="uid://hqubiqkp2wyl"]

[ext_resource type="PackedScene" uid="uid://dfixe14iqokjg" path="res://Scenes/audio_controller.tscn" id="1_bsv0l"]
[ext_resource type="Script" path="res://Scripts/Levelscene.gd" id="1_yn628"]
[ext_resource type="PackedScene" uid="uid://dwjnvrmqbyn8p" path="res://Scenes/Hero.tscn" id="2_fi4i7"]
[ext_resource type="Texture2D" uid="uid://bshm82lju24ix" path="res://Assets/UI/Green.png" id="2_hjqy8"]
[ext_resource type="Script" path="res://Scripts/camera_2d.gd" id="4_2tqm3"]
[ext_resource type="Texture2D" uid="uid://de06wyxtssfi3" path="res://Assets/UI/Terrain (16x16).png" id="4_6l7we"]
[ext_resource type="PackedScene" uid="uid://kboqai16jo3k" path="res://Scenes/Enemy.tscn" id="4_64dpm"]
[ext_resource type="Texture2D" uid="uid://c6eed4njgeovy" path="res://Assets/UI/menu.png" id="4_fxxae"]
[ext_resource type="PackedScene" uid="uid://7ukagojcdr8b" path="res://Scenes/MainUI.tscn" id="8_8r0n5"]
[ext_resource type="Script" path="res://Scripts/level_canvas.gd" id="9_0gg3t"]
[ext_resource type="Texture2D" uid="uid://cyns5m1ranhqo" path="res://Assets/props/prop_projectile.png" id="10_11wig"]
[ext_resource type="Texture2D" uid="uid://bnb4366k10w56" path="res://Assets/Hero/dust/FX052_01.png" id="10_o5pcy"]
[ext_resource type="Texture2D" uid="uid://c6lkjgulcsmd" path="res://Assets/Hero/dust/FX052_02.png" id="11_m3ui1"]
[ext_resource type="Texture2D" uid="uid://b1867fu8842jn" path="res://Assets/Hero/dust/FX052_03.png" id="12_ldmr5"]
[ext_resource type="Texture2D" uid="uid://deb3ssw5k3q62" path="res://Assets/UI/tile.png" id="12_vhtty"]
[ext_resource type="Texture2D" uid="uid://dsfm1f8f2hq85" path="res://Assets/Hero/dust/FX052_04.png" id="13_5eei2"]
[ext_resource type="Texture2D" uid="uid://0mklehah2l3n" path="res://Assets/Hero/BackThrust/FX033_01.png" id="14_14jj7"]
[ext_resource type="Texture2D" uid="uid://d0wc6pjyi65lt" path="res://Assets/Hero/BackThrust/FX033_02.png" id="15_iyk2b"]
[ext_resource type="Texture2D" uid="uid://cb3sm6yqtwhh5" path="res://Assets/Hero/BackThrust/FX033_03.png" id="16_e41c2"]
[ext_resource type="Texture2D" uid="uid://bhip4hf3lvkkn" path="res://Assets/Hero/BackThrust/FX033_04.png" id="17_wb711"]
[ext_resource type="Texture2D" uid="uid://bkukgk7rv3p02" path="res://Assets/Hero/BackThrust/FX033_05.png" id="18_bderv"]
[ext_resource type="Texture2D" uid="uid://bd5q81jhudgks" path="res://Assets/Hero/BackThrust/FX033_06.png" id="19_my5am"]
[ext_resource type="Texture2D" uid="uid://3t7brmja25fe" path="res://Assets/Hero/BackThrust/FX033_07.png" id="20_10raw"]
[ext_resource type="Texture2D" uid="uid://dricfjpcn5pb1" path="res://Assets/Hero/BackThrust/FX033_08.png" id="21_233tf"]
[ext_resource type="Texture2D" uid="uid://c63vcsaeg082k" path="res://Assets/Hero/BackThrust/FX033_09.png" id="22_rvvn0"]
[ext_resource type="Texture2D" uid="uid://cc2l8ksqbl33x" path="res://Assets/Hero/BackThrust/FX033_10.png" id="23_y2omd"]
[ext_resource type="Script" path="res://Scripts/spawn_enemy.gd" id="26_sj61a"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2oj5i"]
texture = ExtResource("4_6l7we")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0/terrains_peering_bit/right_side = 0
6:0/0/terrains_peering_bit/bottom_right_corner = 0
6:0/0/terrains_peering_bit/bottom_side = 0
6:0/0/terrains_peering_bit/bottom_left_corner = 0
6:0/0/terrains_peering_bit/top_right_corner = 0
7:0/0 = 0
7:0/0/terrain_set = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0/terrains_peering_bit/right_side = 0
7:0/0/terrains_peering_bit/bottom_right_corner = 0
7:0/0/terrains_peering_bit/bottom_side = 0
7:0/0/terrains_peering_bit/bottom_left_corner = 0
7:0/0/terrains_peering_bit/left_side = 0
7:0/0/terrains_peering_bit/top_left_corner = 0
7:0/0/terrains_peering_bit/top_right_corner = 0
8:0/0 = 0
8:0/0/terrain_set = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0/terrains_peering_bit/bottom_right_corner = 0
8:0/0/terrains_peering_bit/bottom_side = 0
8:0/0/terrains_peering_bit/bottom_left_corner = 0
8:0/0/terrains_peering_bit/left_side = 0
8:0/0/terrains_peering_bit/top_left_corner = 0
9:0/0 = 0
9:0/0/terrain_set = 0
10:0/0 = 0
10:0/0/terrain_set = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/bottom_right_corner = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/bottom_left_corner = 0
6:1/0/terrains_peering_bit/left_side = 0
6:1/0/terrains_peering_bit/top_left_corner = 0
6:1/0/terrains_peering_bit/top_side = 0
6:1/0/terrains_peering_bit/top_right_corner = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0/terrains_peering_bit/right_side = 0
7:1/0/terrains_peering_bit/bottom_right_corner = 0
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/bottom_left_corner = 0
7:1/0/terrains_peering_bit/left_side = 0
7:1/0/terrains_peering_bit/top_left_corner = 0
7:1/0/terrains_peering_bit/top_side = 0
7:1/0/terrains_peering_bit/top_right_corner = 0
8:1/0 = 0
8:1/0/terrain_set = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0/terrains_peering_bit/right_side = 0
8:1/0/terrains_peering_bit/bottom_right_corner = 0
8:1/0/terrains_peering_bit/bottom_side = 0
8:1/0/terrains_peering_bit/bottom_left_corner = 0
8:1/0/terrains_peering_bit/left_side = 0
8:1/0/terrains_peering_bit/top_left_corner = 0
8:1/0/terrains_peering_bit/top_side = 0
8:1/0/terrains_peering_bit/top_right_corner = 0
9:1/0 = 0
9:1/0/terrain_set = 0
10:1/0 = 0
10:1/0/terrain_set = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/bottom_right_corner = 0
6:2/0/terrains_peering_bit/bottom_side = 0
6:2/0/terrains_peering_bit/bottom_left_corner = 0
6:2/0/terrains_peering_bit/left_side = 0
6:2/0/terrains_peering_bit/top_left_corner = 0
6:2/0/terrains_peering_bit/top_side = 0
6:2/0/terrains_peering_bit/top_right_corner = 0
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0/terrains_peering_bit/right_side = 0
7:2/0/terrains_peering_bit/bottom_right_corner = 0
7:2/0/terrains_peering_bit/bottom_side = 0
7:2/0/terrains_peering_bit/bottom_left_corner = 0
7:2/0/terrains_peering_bit/left_side = 0
7:2/0/terrains_peering_bit/top_left_corner = 0
7:2/0/terrains_peering_bit/top_side = 0
7:2/0/terrains_peering_bit/top_right_corner = 0
8:2/0 = 0
8:2/0/terrain_set = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0/terrains_peering_bit/right_side = 0
8:2/0/terrains_peering_bit/bottom_right_corner = 0
8:2/0/terrains_peering_bit/bottom_side = 0
8:2/0/terrains_peering_bit/bottom_left_corner = 0
8:2/0/terrains_peering_bit/left_side = 0
8:2/0/terrains_peering_bit/top_left_corner = 0
8:2/0/terrains_peering_bit/top_side = 0
8:2/0/terrains_peering_bit/top_right_corner = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_7dup6"]
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/1 = SubResource("TileSetAtlasSource_2oj5i")

[sub_resource type="SpriteFrames" id="SpriteFrames_8dykw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_o5pcy")
}, {
"duration": 1.0,
"texture": ExtResource("11_m3ui1")
}, {
"duration": 1.0,
"texture": ExtResource("12_ldmr5")
}, {
"duration": 1.0,
"texture": ExtResource("13_5eei2")
}],
"loop": false,
"name": &"Dust",
"speed": 8.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_g4u8e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_14jj7")
}, {
"duration": 1.0,
"texture": ExtResource("15_iyk2b")
}, {
"duration": 1.0,
"texture": ExtResource("16_e41c2")
}, {
"duration": 1.0,
"texture": ExtResource("17_wb711")
}, {
"duration": 1.0,
"texture": ExtResource("18_bderv")
}, {
"duration": 1.0,
"texture": ExtResource("19_my5am")
}, {
"duration": 1.0,
"texture": ExtResource("20_10raw")
}, {
"duration": 1.0,
"texture": ExtResource("21_233tf")
}, {
"duration": 1.0,
"texture": ExtResource("22_rvvn0")
}, {
"duration": 1.0,
"texture": ExtResource("23_y2omd")
}],
"loop": false,
"name": &"thrust",
"speed": 15.0
}]

[node name="MainScene" type="Node2D"]
position = Vector2(-7, 16)
script = ExtResource("1_yn628")

[node name="AudioController" parent="." instance=ExtResource("1_bsv0l")]
position = Vector2(10, -12)

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -18.0
offset_right = 1600.0
offset_bottom = 710.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hjqy8")
stretch_mode = 1

[node name="TileMapLayer" type="TileMapLayer" parent="." groups=["enemies"]]
texture_filter = 1
position = Vector2(10, -13)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAsAAAAAAAGAAQAAAABAAAAAAAGAAQAAAACAAAAAAAGAAQAAAADAAAAAAAGAAQAAAAEAAAAAAAGAAQAAAAFAAAAAAAGAAQAAAAGAAAAAAAGAAQAAAAHAAAAAAAGAAQAAAAIAAAAAAAGAAQAAAAJAAAAAAAGAAQAAAAKAAAAAAAGAAQAAAALAAAAAAAGAAQAAAAMAAAAAAAGAAQAAAANAAAAAAAGAAQAAAAOAAAAAAAGAAQAAAAPAAAAAAAGAAQAAAAQAAAAAAAGAAQAAAARAAAAAAAGAAQAAAASAAAAAAAGAAQAAAATAAAAAAAGAAQAAAAUAAAAAAAGAAQAAAAVAAAAAAAGAAQAAAAWAAAAAAAGAAQAAAAXAAAAAAAGAAQAAAAYAAAAAAAGAAQAAAAZAAAAAAAGAAQAAAAaAAAAAAAGAAQAAAAbAAAAAAAGAAQAAAAcAAAAAAAGAAQAAAAdAAAAAAAGAAQAAAAeAAAAAAAGAAQAAAAfAAAAAAAGAAQAAAAgAAAAAAAGAAQAAAAhAAAAAAAGAAQAAAAiAAAAAAAGAAQAAAAjAAAAAAAGAAQAAAAkAAAAAAAGAAQAAAAlAAAAAAAGAAQAAAAmAAAAAAAGAAQAAAAnAAAAAAAGAAQAAAAoAAAAAAAGAAQAAAApAAAAAAAGAAQAAAAqAAAAAAAGAAQAAAArAAAAAAAGAAQAAAAtAAAAAAAGAAQAAAAuAAAAAAAGAAQAAAAvAAAAAAAGAAQAAAAwAAAAAAAGAAQAAAAxAAAAAAAGAAQAAAAxAAEAAAAGAAQAAAAxAAIAAAAGAAQAAAAxAAMAAAAGAAQAAAAxAAUAAAAGAAQAAAAxAAQAAAAGAAQAAAAxAAYAAAAGAAQAAAAxAAcAAAAGAAQAAAAxAAgAAAAGAAQAAAAxAAkAAAAGAAQAAAAxAAoAAAAGAAQAAAAxAAsAAAAGAAQAAAAxAAwAAAAGAAQAAAAxAA0AAAAGAAQAAAAxAA4AAAAGAAQAAAAxAA8AAAAGAAQAAAAxABAAAAAGAAQAAAAxABEAAAAGAAQAAAAxABIAAAAGAAQAAAAxABMAAAAGAAQAAAAxABQAAAAGAAQAAAAxABUAAAAGAAQAAAAUABQAAQAGAAIAAAAUABUAAQAGAAIAAAAVABQAAQAHAAIAAAAVABUAAQAHAAIAAAAWABQAAQAIAAIAAAAWABUAAQAIAAIAAAAUABIAAQAGAAEAAAAUABMAAQAGAAEAAAAVABIAAQAHAAEAAAAVABMAAQAHAAEAAAAWABIAAQAIAAEAAAAWABMAAQAIAAEAAAAUABAAAQAGAAEAAAAVABAAAQAHAAEAAAAWABAAAQAIAAEAAAAXABQAAQAGAAEAAAAXABUAAQAGAAIAAAAYABQAAQAHAAEAAAAYABUAAQAHAAIAAAAZABQAAQAIAAEAAAAZABUAAQAIAAIAAAAXABIAAQAGAAEAAAAXABMAAQAGAAIAAAAYABIAAQAHAAEAAAAYABMAAQAHAAIAAAAZABIAAQAIAAEAAAAZABMAAQAIAAIAAAAXABAAAQAGAAEAAAAXABEAAQAGAAIAAAAYABAAAQAHAAEAAAAYABEAAQAHAAIAAAAZABAAAQAIAAEAAAAZABEAAQAIAAIAAAAXAA4AAQAGAAEAAAAXAA8AAQAGAAIAAAAYAA4AAQAHAAEAAAAYAA8AAQAHAAIAAAAZAA4AAQAIAAEAAAAZAA8AAQAIAAIAAAAUAA4AAQAGAAEAAAAUAA8AAQAGAAIAAAAVAA4AAQAHAAEAAAAVAA8AAQAHAAIAAAAWAA4AAQAIAAEAAAAWAA8AAQAIAAIAAAAUAA0AAQAGAAAAAAAVAA0AAQAHAAAAAAAWAA0AAQAIAAAAAAAXAA0AAQAGAAAAAAAYAA0AAQAHAAAAAAAZAA0AAQAIAAAAAAAUABEAAQAGAAEAAAAVABEAAQAHAAEAAAAWABEAAQAIAAEAAAAAABYAAQAGAAAAAAABABYAAQAHAAAAAAACABYAAQAIAAAAAAADABYAAQAGAAAAAAAEABYAAQAHAAAAAAAFABYAAQAIAAAAAAAGABYAAQAGAAAAAAAHABYAAQAHAAAAAAAIABYAAQAIAAAAAAAJABYAAQAGAAAAAAAKABYAAQAHAAAAAAALABYAAQAIAAAAAAAMABYAAQAGAAAAAAANABYAAQAHAAAAAAAOABYAAQAIAAAAAAAPABYAAQAGAAAAAAAQABYAAQAHAAAAAAARABYAAQAIAAAAAAASABYAAQAGAAAAAAATABYAAQAHAAAAAAAUABYAAQAIAAAAAAAVABYAAQAGAAAAAAAWABYAAQAHAAAAAAAXABYAAQAIAAAAAAAYABYAAQAGAAAAAAAZABYAAQAHAAAAAAAaABYAAQAIAAAAAAAbABYAAQAGAAAAAAAcABYAAQAHAAAAAAAdABYAAQAIAAAAAAAeABYAAQAGAAAAAAAfABYAAQAHAAAAAAAgABYAAQAIAAAAAAAhABYAAQAGAAAAAAAiABYAAQAHAAAAAAAjABYAAQAIAAAAAAAkABYAAQAGAAAAAAAlABYAAQAHAAAAAAAmABYAAQAIAAAAAAAnABYAAQAGAAAAAAAoABYAAQAHAAAAAAApABYAAQAIAAAAAAAqABYAAQAGAAAAAAArABYAAQAHAAAAAAAsABYAAQAIAAAAAAAtABYAAQAGAAAAAAAuABYAAQAHAAAAAAAvABYAAQAGAAAAAAAwABYAAQAHAAAAAAAxABYAAQAIAAAAAAA=")
tile_set = SubResource("TileSet_7dup6")

[node name="Enemy" parent="." groups=["enemies"] instance=ExtResource("4_64dpm")]
position = Vector2(1180, 176)

[node name="Hero" parent="." instance=ExtResource("2_fi4i7")]
position = Vector2(514, 192)
appleCount = 100

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(767, 520)
zoom = Vector2(2, 2)
limit_bottom = 720
position_smoothing_enabled = true
position_smoothing_speed = 3.0
script = ExtResource("4_2tqm3")

[node name="MainUI" parent="." instance=ExtResource("8_8r0n5")]

[node name="LevelCanvas" type="CanvasLayer" parent="."]
script = ExtResource("9_0gg3t")

[node name="MenuButton" type="TextureButton" parent="LevelCanvas"]
offset_left = 10.0
offset_top = 4.0
offset_right = 95.0
offset_bottom = 65.0
texture_normal = ExtResource("4_fxxae")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="LevelCanvas"]
offset_left = 90.0
offset_top = 3.0
offset_right = 153.0
offset_bottom = 60.0
texture = ExtResource("10_11wig")
stretch_mode = 5

[node name="Label" type="Label" parent="LevelCanvas/TextureRect"]
layout_mode = 0
offset_left = 34.0
offset_top = 31.0
offset_right = 89.0
offset_bottom = 80.0
text = "100

"

[node name="TextureButtonJump" type="TouchScreenButton" parent="LevelCanvas"]
position = Vector2(1369, 575)
scale = Vector2(0.256667, 0.19)
texture_normal = ExtResource("12_vhtty")
action = "ui_up"

[node name="TextureButtonHit" type="TouchScreenButton" parent="LevelCanvas"]
position = Vector2(56, 555)
scale = Vector2(0.278333, 0.211667)
texture_normal = ExtResource("12_vhtty")
action = "ui_down"

[node name="AnimatedSpriteDust" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_8dykw")
animation = &"Dust"

[node name="AnimatedSpriteThrust" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(1.8, 1.8)
sprite_frames = SubResource("SpriteFrames_g4u8e")
animation = &"thrust"
frame = 1
offset = Vector2(65, 0)
flip_h = true

[node name="SpawnEnemy" type="Node" parent="."]
script = ExtResource("26_sj61a")
enemyCount = 3

[connection signal="currentEnemyCount" from="Enemy" to="SpawnEnemy" method="_on_enemy_current_enemy_count"]
[connection signal="applesCount" from="Hero" to="LevelCanvas" method="_on_hero_apples_count"]
[connection signal="jumpPositionBust" from="Hero" to="." method="_on_hero_jump_position_bust"]
[connection signal="moveBackPosition" from="Hero" to="." method="_on_hero_move_back_position"]
[connection signal="pressed" from="LevelCanvas/MenuButton" to="MainUI" method="_on_menu_button_pressed"]
[connection signal="animation_finished" from="AnimatedSpriteDust" to="." method="_on_animated_sprite_dust_animation_finished"]
[connection signal="animation_finished" from="AnimatedSpriteThrust" to="." method="_on_animated_sprite_thrust_animation_finished"]
